--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,90 @@ body {
 .oneoften {
   margin-bottom: 5%;
 }
+
+
+
+.fishes{
+  animation: fishes-jiggle 1s infinite ease-in-out;
+  transition: color 1000ms linear;
+}
+
+.fishes:hover{
+  fill: #2d4171;
+}
+
+@keyframes fishes-jiggle {
+  0% {
+    transform: scale(1.005, 1.005);
+  }
+  25% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.005, 1.005);
+  }
+  75% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1.005, 1.005);
+  }
+}
+
+
+
+
+
+.bobberin{
+  animation: bobberin-jiggle 1s infinite ease-in-out;
+}
+@keyframes bobberin-jiggle {
+  0% {
+    transform: scale(1.01, 1.01);
+  }
+  50% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1.01, 1.01);
+  }
+}
+
+
+.bobberout{
+  animation: bobberout-jiggle 1s infinite ease-in-out;
+}
+@keyframes bobberout-jiggle {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.01, 1.01);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+
+.fishinleaf{
+  animation: fishinleaf-jiggle 1s infinite ease-in-out;
+  fill: #2d4171;
+}
+@keyframes fishinleaf-jiggle {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.005, 1.005);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+.fishleaf{
+  transition: color 1000ms linear;
+}
+.fishleaf:hover{
+  fill: #d8eaf8;
+}
