--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ html {
 body {
   margin: 0;
 }
-/* MARGINS SECTION */
+/* margins section */
 
 .twomil {
   margin-right: 5%;
@@ -50,8 +50,8 @@ body {
 .midinfo {
   margin-bottom: 1rem;
 }
-/* MARGINS SECTION END */
-/* WAY POINTS SECTION */
+/* margins section end */
+/* way points section */
 
 .header {
   padding: 2%;
@@ -129,8 +129,8 @@ body {
   opacity: 1;
 }
 
-/* WAY POINTS SECTION END */
-/* TITLE SECTION */
+/* way points section end */
+/* title section */
 
 .titlefishing {
   animation: titlefishing-jiggle 2.5s infinite ease-in-out;
@@ -232,8 +232,8 @@ body {
   background-image: linear-gradient(to bottom, #edc596, #fbd7a7);
   text-align: center;
 }
-/* TITLE SECTION END */
-/* FIRST SECTION */
+/* title section end */
+/* first section */
 
 .fishes {
   animation: fishes-jiggle 3s infinite ease-in-out;
@@ -388,8 +388,8 @@ body {
     transform: rotate(0deg);
   }
 }
-/* FIRST SECTION END */
-/* LAST SECTION */
+/* first section end */
+/* last section */
 
 .planewiggle {
   animation: planewiggle-jiggle 2.5s infinite ease-in-out;
@@ -422,8 +422,8 @@ body {
     transform: rotate(0deg);
   }
 }
-/* LAST SECTION END */
-/* FOOTER SECTION */
+/* last section end */
+/* footer section */
 
 .footsandbar {
   min-height: 6rem;
@@ -431,56 +431,56 @@ body {
   background-image: linear-gradient(to top, #edc596, #fbd7a7);
   text-align: center;
 }
-/* FOOTER SECTION END */
+/* footer section end */
 
 
-/* SVG BOILER */
+/* svg boiler */
 
   .st0 {
     fill:none;
   }
 
   .st1 {
-    fill:#AAC5E7;
+    fill:#aac5e7;
     stroke:#000000;
     stroke-width:1.1128;
     stroke-miterlimit:10;
   }
 
   .st2 {
-    fill:#FBD7A7;
+    fill:#fbd7a7;
   }
 
   .st3 {
-    fill:#5D4838;
+    fill:#5d4838;
   }
 
   .st4 {
-    fill:#A79072;
+    fill:#a79072;
   }
 
   .st5 {
-    fill:#2D4171;
+    fill:#2d4171;
   }
 
   .st6 {
-    fill:#D9EAF8;
+    fill:#d9eaf8;
   }
 
   .st7 {
-    fill:#4F70B6;
+    fill:#4f70b6;
   }
 
   .st8 {
-    fill:#D9EAF8;
-    stroke:#2D4171;
+    fill:#d9eaf8;
+    stroke:#2d4171;
     stroke-width:0.5;
     stroke-miterlimit:10;
   }
 
   .st9 {
     fill:none;
-    stroke:#FBD7A7;
+    stroke:#fbd7a7;
     stroke-width:1.088;
     stroke-linecap:round;
     stroke-miterlimit:10;
@@ -488,82 +488,82 @@ body {
 
   .st10 {
     fill:none;
-    stroke:#FBD7A7;
+    stroke:#fbd7a7;
     stroke-width:2.7079;
     stroke-miterlimit:10;
   }
 
   .st11 {
-    fill:#FFFFFF;
-    stroke:#2D4171;
+    fill:#ffffff;
+    stroke:#2d4171;
     stroke-miterlimit:10;
   }
 
   .st12 {
-    fill:#FFFFFF;
-    stroke:#2D4171;
+    fill:#ffffff;
+    stroke:#2d4171;
     stroke-width:2.8741;
     stroke-miterlimit:10;
   }
 
   .st13 {
-    fill:#D9EAF8;
-    stroke:#2D4171;
+    fill:#d9eaf8;
+    stroke:#2d4171;
     stroke-width:3;
     stroke-miterlimit:10;
   }
 
   .st14 {
-    fill:#7698CF;
+    fill:#7698cf;
   }
 
   .st15 {
-    fill:#AAC5E7;
+    fill:#aac5e7;
   }
 
   .st16 {
     fill:none;
-    stroke:#4F70B6;
+    stroke:#4f70b6;
     stroke-width:1.3493;
     stroke-miterlimit:10;
   }
 
   .st17 {
-    fill:#FFFFFF;
+    fill:#ffffff;
   }
 
   .st18 {
-    fill:#D9EAF8;
-    stroke:#4F70B6;
+    fill:#d9eaf8;
+    stroke:#4f70b6;
     stroke-width:0.5;
     stroke-miterlimit:10;
   }
 
   .st19 {
-    fill:#4F70B6;
-    stroke:#4F70B6;
+    fill:#4f70b6;
+    stroke:#4f70b6;
     stroke-width:0.5;
     stroke-linecap:round;
     stroke-miterlimit:10;
   }
 
   .st20 {
-    fill:#4F70B6;
-    stroke:#AAC5E7;
+    fill:#4f70b6;
+    stroke:#aac5e7;
     stroke-width:0.5;
     stroke-miterlimit:10;
   }
 
   .st21 {
-    fill:#4F70B6;
-    stroke:#4F70B6;
+    fill:#4f70b6;
+    stroke:#4f70b6;
     stroke-width:0.5;
     stroke-miterlimit:10;
   }
 
   .st22 {
     fill:none;
-    stroke:#FBD7A7;
+    stroke:#fbd7a7;
     stroke-width:2.7079;
     stroke-linecap:round;
     stroke-miterlimit:10;
@@ -571,7 +571,7 @@ body {
 
   .st23 {
     fill:none;
-    stroke:#2D4171;
+    stroke:#2d4171;
     stroke-width:2.7079;
     stroke-linecap:round;
     stroke-miterlimit:10;
@@ -579,104 +579,104 @@ body {
 
   .st24 {
     fill:none;
-    stroke:#4F70B6;
+    stroke:#4f70b6;
     stroke-width:1.088;
     stroke-miterlimit:10;
   }
 
   .st25 {
-    fill:#7698CF;
-    stroke:#2D4171;
+    fill:#7698cf;
+    stroke:#2d4171;
     stroke-width:3;
     stroke-miterlimit:10;
   }
   .st26 {
-    fill:#D9EAF8;
-    stroke:#4F70B6;
+    fill:#d9eaf8;
+    stroke:#4f70b6;
     stroke-width:3;
     stroke-miterlimit:10;
   }
 
   .st27 {
-    fill:#4F70B6;
-    stroke:#2D4171;
+    fill:#4f70b6;
+    stroke:#2d4171;
     stroke-width:3;
     stroke-miterlimit:10;
   }
 
   .st28 {
-    fill:#FBD7A7;
-    stroke:#A79072;
+    fill:#fbd7a7;
+    stroke:#a79072;
     stroke-width:3;
     stroke-miterlimit:10;
   }
 
   .st29 {
     fill:none;
-    stroke:#7698CF;
+    stroke:#7698cf;
     stroke-width:1.0494;
     stroke-miterlimit:10;
   }
 
   .st30 {
     fill:none;
-    stroke:#2D4171;
+    stroke:#2d4171;
     stroke-width:1.0494;
     stroke-miterlimit:10;
   }
 
   .st31 {
     fill:none;
-    stroke:#D9EAF8;
+    stroke:#d9eaf8;
     stroke-width:1.2626;
     stroke-miterlimit:10;
   }
 
   .st32 {
     fill:none;
-    stroke:#4F70B6;
+    stroke:#4f70b6;
     stroke-width:1.2626;
     stroke-miterlimit:10;
   }
 
   .st33 {
     fill:none;
-    stroke:#7698CF;
+    stroke:#7698cf;
     stroke-width:1.2626;
     stroke-miterlimit:10;
   }
 
   .st34 {
     fill:none;
-    stroke:#2D4171;
+    stroke:#2d4171;
     stroke-width:1.2626;
     stroke-miterlimit:10;
   }
 
   .st35 {
     fill:none;
-    stroke:#7698CF;
+    stroke:#7698cf;
     stroke-width:1.3994;
     stroke-miterlimit:10;
   }
 
   .st36 {
     fill:none;
-    stroke:#4F70B6;
+    stroke:#4f70b6;
     stroke-width:1.0494;
     stroke-miterlimit:10;
   }
 
   .st37 {
     fill:none;
-    stroke:#D9EAF8;
+    stroke:#d9eaf8;
     stroke-width:1.0494;
     stroke-miterlimit:10;
   }
 
   .st38 {
-    fill:#FFFFFF;
-    stroke:#2D4171;
+    fill:#ffffff;
+    stroke:#2d4171;
     stroke-width:3;
     stroke-miterlimit:10;
   }
@@ -689,4 +689,4 @@ body {
 
 
 
-/* SVG BOILER END */
+/* svg boiler end */
