--- a/css/main.css
+++ b/css/main.css
@@ -25,36 +25,12 @@ body {
 h1 {
   font-size: 120%;
   color: #a79072;
-  padding-bottom: 2rem;
-  animation: titlecanada-jiggle 3s infinite ease-in-out;
+  padding-bottom: 3%;
+  transition: color 500ms linear;
 }
 
-@keyframes h1-jiggle {
-
-  0% {
-    transform: scale(1.005, 1.005);
-    transform: rotate(0deg);
-  }
-
-  25% {
-    transform: scale(1, 1);
-    transform: rotate(0.5deg);
-  }
-
-  50% {
-    transform: scale(1.005, 1.005);
-    transform: rotate(0deg);
-  }
-
-  75% {
-    transform: scale(1, 1);
-    transform: rotate(0.5deg);
-  }
-
-  100% {
-    transform: scale(1.005, 1.005);
-    transform: rotate(0deg);
-  }
+h1:hover {
+  color: #5c4737;
 }
 
 /* margins section */
